--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
@@ -16,5 +17,26 @@
       </ul>
     </nav>
     <script src="index.js"></script>
+
+    <div class="row">
+      <div class="col-sm-2" style="background-color:rgb(250, 217, 217);">
+        <img src="Papa_Louie.webp" class="img-thumbnail" alt="louis" width="200"> 
+      </div>
+      <div class="col-sm-4" style="background-color:rgb(250, 217, 217);">
+        <h2>Papa Louis</h2>
+        <p>
+          Papa Louie opened Papa's Pizzeria  October 9, 2007 in Tastyville, Flipverse. It was the first of many successful restaurants opened by Papa Louie all over Flipverse. He has many loyal customers who frequent his restaurants to eat his delicious food.
+        </p>
+      </div>
+      <div class="col-sm-2" style="background-color:rgb(215, 213, 245);">
+        <img src="Roy.webp" class="img-thumbnail" alt="roy" width="200"> 
+      </div>
+      <div class="col-sm-4" style="background-color:rgb(215, 213, 245);">
+        <h2>Roy</h2>
+        <p>
+          Roy is Papa Louie's nephew and first employee. Papa Louie left him in charge of the Pizzeria when he departed on one of his many adventures. As the sole employee of Papa's Pizzeria, Roy does all the cooking, waiting, and management at the restaurant.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
