--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="screen.css">
   </head>
+
   <body>
+
     <h1>Home</h1>
     <nav>
       <ul>
@@ -16,5 +19,25 @@
       </ul>
     </nav>
     <script src="index.js"></script>
+
+    <div class="jumbotron text-center">
+      <h1>Papa's Pizzeria</h1>
+    </div>
+      
+    
+
+    <div class="row">
+      <div class="col-sm-4" style="background-color:lavenderblush;">
+        <img src="pizzeria.png" class="img-thumbnail" alt="Pizza" width="400"> 
+      </div>
+      <div class="col-sm-8" style="background-color:lavenderblush;"> 
+        <p>
+          Welcome to the homepage of Papa's Pizzeria! Come eat at our Pizzeria located in Tastyville. We offer fully customizable pizzas made fresh for every customer.
+        </p>
+      </div>
+    </div>
+
   </body>
 </html>
+
+
